--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,68 @@
     padding:10px;
     box-sizing:border-box;
 }
+.real, .contact{
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 20px;
+}
+.about p, .questions p{
+    margin: 10px 0;
+}
+.lorem{
+    font-size: 1.5rem;
+}
+.lorem button{
+    padding: 10px;
+    margin: 20px;
+    background: transparent;
+}
+.experience{
+    display: flex;
+    flex-direction: row;
+}
+.work, .rental, .deals{
+    margin: 0 15px;
+}
+.questions h1{
+    margin: 0 0 20px 0;
+}
+.form{
+    margin: 50px 0 0 0;
+    font-size: 1.3rem;
+}
+.form a{
+    color: orange;
+}
+input{
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin: 10px;
+}
+.input{
+    display: flex;
+    flex-direction: column;
+}
+.form button{
+    padding: 10px 40px;
+    margin: 10px;
+    background: orangered;
+}
+.form p{
+    font-size: 0.7rem;
+    margin: 0 0 0 10px;
+}
+@media screen and (min-width:0) and (max-width:750px) {
+    h1{
+        font-size: 1.2rem;
+    }
+}
+@media screen and (min-width:750px) and (max-width:1024px) {
+    h1{
+        font-size: 2rem;
+    }
+    br{
+        display: none;
+    }
+}
